ajustes finais nos endopoints de usuario e iniciando a parte de autenticacao
